--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,8 @@ h1, h2 {
 
 .input-group input,
 .input-group select,
-.input-group button {
+.input-group button,
+.input-style {
   padding: 8px 12px;
   border-radius: 4px;
   border: 1px solid #ccc;
@@ -100,6 +101,9 @@ button {
 }
 
 .btn-add {
+  padding: 8px 12px;
+  border-radius: 4px;
+  font-size: 14px;
   background-color: #2b6eb5;
 }
 
